// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webex Activity Stream component snapshot matches with default stream 1`] = `
<div
  className="activity-stream"
>
  <WebexActivity
    activityID="default"
    key="default"
  />
  <WebexActivity
    activityID="no-header"
    key="no-header"
  />
  <WebexActivity
    activityID="long"
    key="long"
  />
  <div
    className="last-activity"
  />
</div>
`;

exports[`Webex Activity Stream component snapshot matches with empty direct stream 1`] = `
<div
  className="activity-stream"
>
  <Greeting
    personName="Webex Component User"
  />
  <div
    className="last-activity"
  />
</div>
`;

exports[`Webex Activity Stream component snapshot matches with empty group stream 1`] = `
<div
  className="activity-stream"
>
  <Greeting
    personName=""
  />
  <div
    className="last-activity"
  />
</div>
`;

exports[`Webex Activity Stream component snapshot matches with time rulers stream 1`] = `
<div
  className="activity-stream"
>
  <TimeRuler
    key="2019-08-20T21:00:07.047Z"
    text="2019-08-20T21:00:07.047Z P"
  />
  <WebexActivity
    activityID="default"
    key="default"
  />
  <WebexActivity
    activityID="no-header"
    key="no-header"
  />
  <WebexActivity
    activityID="long"
    key="long"
  />
  <TimeRuler
    key="2019-08-22T21:00:07.047Z"
    text="2019-08-22T21:00:07.047Z P"
  />
  <WebexActivity
    activityID="multi-line"
    key="multi-line"
  />
  <div
    className="last-activity"
  />
</div>
`;
